fix modal overflow bug

--- a/packages/ui-components/src/style.css
+++ b/packages/ui-components/src/style.css
@@ -67,3 +67,15 @@
     -moz-appearance: textfield !important;
   }
 }
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
